--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Adminpro</title>
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Favicon icon -->
@@ -13,10 +14,9 @@
     <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="assets/css/style.css" rel="stylesheet">
-    <!-- You can change the theme colors from here -->
-    <link href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
+    <!-- You can change the theme colors from here   href="assets/css/colors/default-dark.css" cargado desde localStorage-->
+    <link id="theme" rel="stylesheet">
     
-    <base href="/">
 </head>
 <body class="fix-header card-no-border fix-sidebar">
     
@@ -50,6 +50,6 @@
     <script src="assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
     <script src="assets/plugins/sparkline/jquery.sparkline.min.js"></script>
     <!--Custom JavaScript -->
-    <script src="assets/js/custom.min.js"></script> 
+    <script src="assets/js/custom.js"></script> 
 </body>
 </html>
