--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <!-- You can change the theme colors from here   href="assets/css/colors/default-dark.css" cargado desde localStorage-->
     <link id="theme" rel="stylesheet">
+
+    <!--google-->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     
 </head>
 <body class="fix-header card-no-border fix-sidebar">
